--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+/*
+* File: style.css
+* Author: Meggyesi Réka
+* Copyright: 2023, Meggyesi Réka
+* Group: Szoft I/1/E
+* Date: 2023-01-31
+* Github: https://github.com/meggyesireka/
+* Licenc: GNU GPL
+*/
+
 .ab{
     background-color: bisque;
 }
